; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/display/extr_display-sysfs.c_display_suspend.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/display/extr_display-sysfs.c_display_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.display_device = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.display_device*, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i32)* @display_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @display_suspend(%struct.device* %0, i32 %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.display_device*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.device*, %struct.device** %3, align 8
  %7 = call %struct.display_device* @dev_get_drvdata(%struct.device* %6)
  store %struct.display_device* %7, %struct.display_device** %5, align 8
  %8 = load %struct.display_device*, %struct.display_device** %5, align 8
  %9 = getelementptr inbounds %struct.display_device, %struct.display_device* %8, i32 0, i32 0
  %10 = call i32 @mutex_lock(i32* %9)
  %11 = load %struct.display_device*, %struct.display_device** %5, align 8
  %12 = getelementptr inbounds %struct.display_device, %struct.display_device* %11, i32 0, i32 1
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32 (%struct.display_device*, i32)*, i32 (%struct.display_device*, i32)** %14, align 8
  %16 = call i64 @likely(i32 (%struct.display_device*, i32)* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %27

18:                                               ; preds = %2
  %19 = load %struct.display_device*, %struct.display_device** %5, align 8
  %20 = getelementptr inbounds %struct.display_device, %struct.display_device* %19, i32 0, i32 1
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32 (%struct.display_device*, i32)*, i32 (%struct.display_device*, i32)** %22, align 8
  %24 = load %struct.display_device*, %struct.display_device** %5, align 8
  %25 = load i32, i32* %4, align 4
  %26 = call i32 %23(%struct.display_device* %24, i32 %25)
  br label %27

27:                                               ; preds = %18, %2
  %28 = load %struct.display_device*, %struct.display_device** %5, align 8
  %29 = getelementptr inbounds %struct.display_device, %struct.display_device* %28, i32 0, i32 0
  %30 = call i32 @mutex_unlock(i32* %29)
  ret i32 0
}

declare dso_local %struct.display_device* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i64 @likely(i32 (%struct.display_device*, i32)*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
